removed edit page because we already have modal for it. fixed image overlap issue in teams/index and team/show

--- a/capms/app/assets/stylesheets/teams.css.scss
+++ b/capms/app/assets/stylesheets/teams.css.scss
@@ -49,7 +49,7 @@ div#singleFreeUser img{
 div#singleUser {
 	width: 15%;
 	height: 100%;
-	min-width: 75px;
+	min-width: 105px;
 	text-align: center;
 	padding-left: 3px;
 	padding-right: 3px;
@@ -112,6 +112,7 @@ div#show-user {
 	margin-left: auto;
 	margin-right: auto;
 	display: inline-block;
+  min-width: 125px;
 }
 
 div#show-user img {
